c2prj1_cards/grade.txt
Grading at Tue Aug  7 03:06:04 UTC 2018
Compiling cards.c
cards.c: In function ‘ranking_to_string’:
cards.c:14:7: error: expected ‘:’ or ‘...’ before ‘return’
       return "STRAIGHT FLUSH";
       ^
cards.c:16:7: error: expected ‘:’ or ‘...’ before ‘return’
       return "FOUR OF A KIND";
       ^
cards.c:18:7: error: expected ‘:’ or ‘...’ before ‘returen’
       returen "FULL HOUSE";
       ^
cards.c:18:7: error: ‘returen’ undeclared (first use in this function)
cards.c:18:7: note: each undeclared identifier is reported only once for each function it appears in
cards.c:18:15: error: expected ‘;’ before string constant
       returen "FULL HOUSE";
               ^
cards.c:20:7: error: expected ‘:’ or ‘...’ before ‘return’
       return "FLUSH";
       ^
cards.c:22:7: error: expected ‘:’ or ‘...’ before ‘return’
       return "STRAIGHT";
       ^
cards.c:23:10: error: ‘THREE_OF_A_KIN’ undeclared (first use in this function)
     case THREE_OF_A_KIN)
          ^
cards.c:23:24: error: expected ‘:’ or ‘...’ before ‘)’ token
     case THREE_OF_A_KIN)
                        ^
cards.c:23:24: error: expected statement before ‘)’ token
cards.c:26:7: error: expected ‘:’ or ‘...’ before ‘return’
       return "TWO PAIR";
       ^
cards.c:28:7: error: expected ‘:’ or ‘...’ before ‘return’
       return "PAIR";
       ^
cards.c:30:7: error: expected ‘:’ or ‘...’ before ‘return’
       return "NOTHING";
       ^
cards.c:12:3: error: enumeration value ‘STRAIGHT_FLUSH’ not handled in switch [-Werror=switch]
   switch(r){
   ^
cards.c:12:3: error: enumeration value ‘FOUR_OF_A_KIND’ not handled in switch [-Werror=switch]
cards.c:12:3: error: enumeration value ‘FULL_HOUSE’ not handled in switch [-Werror=switch]
cards.c:12:3: error: enumeration value ‘FLUSH’ not handled in switch [-Werror=switch]
cards.c:12:3: error: enumeration value ‘STRAIGHT’ not handled in switch [-Werror=switch]
cards.c:12:3: error: enumeration value ‘THREE_OF_A_KIND’ not handled in switch [-Werror=switch]
cards.c:12:3: error: enumeration value ‘TWO_PAIR’ not handled in switch [-Werror=switch]
cards.c:12:3: error: enumeration value ‘PAIR’ not handled in switch [-Werror=switch]
cards.c:12:3: error: enumeration value ‘NOTHING’ not handled in switch [-Werror=switch]
cards.c: In function ‘value_letter’:
cards.c:37:3: error: expected ‘;’ before ‘switch’
   switch (c.value){
   ^
cards.c: In function ‘suit_letter’:
cards.c:55:7: error: expected ‘:’ or ‘...’ before ‘return’
       return 's';
       ^
cards.c:57:7: error: expected ‘:’ or ‘...’ before ‘return’
       return 'h';
       ^
cards.c:59:7: error: expected ‘:’ or ‘...’ before ‘return’
       return 'd';
       ^
cards.c:61:7: error: expected ‘:’ or ‘...’ before ‘return’
       return 'c';
       ^
cards.c:53:3: error: enumeration value ‘SPADES’ not handled in switch [-Werror=switch]
   switch(c.suit){
   ^
cards.c:53:3: error: enumeration value ‘HEARTS’ not handled in switch [-Werror=switch]
cards.c:53:3: error: enumeration value ‘DIAMONDS’ not handled in switch [-Werror=switch]
cards.c:53:3: error: enumeration value ‘CLUBS’ not handled in switch [-Werror=switch]
cards.c:53:3: error: enumeration value ‘NUM_SUITS’ not handled in switch [-Werror=switch]
cards.c: In function ‘card_from_letters’:
cards.c:71:22: error: ‘valuelet’ undeclared (first use in this function)
   if(value_let-0<10&&valuelet-0>0)
                      ^
cards.c:75:7: error: expected ‘:’ or ‘...’ before ‘temp’
       temp.value=10;
       ^
cards.c:77:7: error: expected ‘:’ or ‘...’ before ‘temp’
       temp.value=11;
       ^
cards.c:79:7: error: expected ‘:’ or ‘...’ before ‘temp’
       temp.value=12;
       ^
cards.c:81:7: error: expected ‘:’ or ‘...’ before ‘temp’
       temp.value=13;
       ^
cards.c:83:7: error: expected ‘:’ or ‘...’ before ‘temp’
       temp.value=14;
       ^
cards.c:87:7: error: expected ‘:’ or ‘...’ before ‘temp’
       temp.suit="SPADES";
       ^
cards.c:87:16: error: incompatible types when assigning to type ‘suit_t {aka enum <anonymous>}’ from type ‘char *’
       temp.suit="SPADES";
                ^
cards.c:89:7: error: expected ‘:’ or ‘...’ before ‘temp’
       temp.suit="HEARTS";
       ^
cards.c:89:16: error: incompatible types when assigning to type ‘suit_t {aka enum <anonymous>}’ from type ‘char *’
       temp.suit="HEARTS";
                ^
cards.c:91:7: error: expected ‘:’ or ‘...’ before ‘temp’
       temp.suit="DIAMONDS";
       ^
cards.c:91:16: error: incompatible types when assigning to type ‘suit_t {aka enum <anonymous>}’ from type ‘char *’
       temp.suit="DIAMONDS";
                ^
cards.c:93:7: error: expected ‘:’ or ‘...’ before ‘temp’
       temp.suit="CLUBS";
       ^
cards.c:93:16: error: incompatible types when assigning to type ‘suit_t {aka enum <anonymous>}’ from type ‘char *’
       temp.suit="CLUBS";
                ^
cards.c: In function ‘card_from_num’:
cards.c:103:14: error: incompatible types when assigning to type ‘suit_t {aka enum <anonymous>}’ from type ‘char *’
     temp.suit="SPADES";
              ^
cards.c:107:14: error: incompatible types when assigning to type ‘suit_t {aka enum <anonymous>}’ from type ‘char *’
     temp.suit="HEARTS";
              ^
cards.c:111:14: error: incompatible types when assigning to type ‘suit_t {aka enum <anonymous>}’ from type ‘char *’
     temp.suit="DIAMONDS";
              ^
cards.c:115:14: error: incompatible types when assigning to type ‘suit_t {aka enum <anonymous>}’ from type ‘char *’
     temp.suit="CLUBS";
              ^
cards.c:101:7: error: unused variable ‘i’ [-Werror=unused-variable]
   int i=0;
       ^
cards.c: In function ‘ranking_to_string’:
cards.c:32:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cards.c: In function ‘value_letter’:
cards.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cards.c: In function ‘suit_letter’:
cards.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
